[gd_scene load_steps=7 format=3 uid="uid://cbd2ojah4nun6"]

[ext_resource type="Script" uid="uid://bcdmwsn7uc6dr" path="res://addons/cogito/Scripts/interaction_raycast.gd" id="1_yf5t7"]

[sub_resource type="SphereShape3D" id="SphereShape3D_e2hxm"]
margin = 0.075
radius = 0.075

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iac3b"]
transparency = 1
shading_mode = 0
albedo_color = Color(0.333333, 1, 0, 0.501961)

[sub_resource type="SphereMesh" id="SphereMesh_1juxf"]
material = SubResource("StandardMaterial3D_iac3b")
radius = 0.05
height = 0.1
radial_segments = 8
rings = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_icisa"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0, 0, 0.501961)

[sub_resource type="SphereMesh" id="SphereMesh_4320q"]
material = SubResource("StandardMaterial3D_icisa")
radius = 0.025
height = 0.05
radial_segments = 8
rings = 4

[node name="InteractionRaycast" type="RayCast3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 3
script = ExtResource("1_yf5t7")

[node name="InteractionShapecast" type="ShapeCast3D" parent="."]
shape = SubResource("SphereShape3D_e2hxm")
target_position = Vector3(0, 0, -2)
margin = 0.08
max_results = 16
collision_mask = 3

[node name="ShapecastHotspot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.5)

[node name="RaycastHighlighter" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_1juxf")

[node name="TargetHighlighter" type="MeshInstance3D" parent="."]
mesh = SubResource("SphereMesh_4320q")
